# HPC-Assignment-1

./: CMakeLists.txt  Makefile  N_login.txt  Output(1000).txt  Output(10000).txt  Output(100000).txt  PSRS-MPI.c  PSRS-MPI.h  PSRS-OMP.c  PSRS-OMP.h  QuickSort-MPI.c  QuickSort-MPI.h  QuickSort-OMP.c  QuickSort-OMP.h  QuickSort-S.c  QuickSort-S.h  README.md  run_batch.sh
